// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiSelect is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  inputid="id"
  isloading="false"
>
  <oui-validatable-control>
    <select
      aria-label="aria-label"
      class="ouiSelect testClass1 testClass2"
      data-test-subj="test subject string"
      id="id"
      name="name"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props disabled options are rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <oui-validatable-control>
    <select
      class="ouiSelect"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        disabled=""
        value="2"
      >
        Option #2
      </option>
    </select>
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props fullWidth is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="true"
  icon="[object Object]"
  isloading="false"
>
  <oui-validatable-control>
    <select
      class="ouiSelect ouiSelect--fullWidth"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props isInvalid is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <oui-validatable-control
    isinvalid="true"
  >
    <select
      class="ouiSelect"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props isLoading is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="true"
>
  <oui-validatable-control>
    <select
      class="ouiSelect ouiSelect-isLoading"
    />
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props options are rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <oui-validatable-control>
    <select
      class="ouiSelect"
    >
      <option
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </oui-validatable-control>
</oui-form-control-layout>
`;

exports[`OuiSelect props value option is rendered 1`] = `
<oui-form-control-layout
  compressed="false"
  fullwidth="false"
  icon="[object Object]"
  isloading="false"
>
  <oui-validatable-control>
    <select
      class="ouiSelect"
    >
      <option
        selected=""
        value="1"
      >
        Option #1
      </option>
      <option
        value="2"
      >
        Option #2
      </option>
    </select>
  </oui-validatable-control>
</oui-form-control-layout>
`;
